<resources>
    <string name="app_name">Ntsa Driver Learner Manual</string>
    <string-array name="Chapters">
        <item>1:  INTRODUCTION TO DRIVING</item>
        <item>2:  FUNDAMENTAL DRIVING RULES</item>
        <item>3:  MODEL TOWN</item>
        <item>4:  HUMAN FACTORS IN TRAFFIC</item>
        <item>5:  VEHICLE CONSTRUCTIONS AND CONTROLS</item>
        <item>6:  SELF - INSPECTION OF VEHICLE</item>
        <item>7:  OBSERVATION</item>
        <item>8:  VEHICLE CONTROL</item>
        <item>9:  COMMUNICATION ON THE ROAD</item>
        <item>10: SPEED MANAGEMENT</item>
        <item>11: SPACE MANAGEMENT</item>
        <item>12: EMERGENCY MANOEUVRES</item>
        <item>13: SKID CONTROL AND RECOVERY</item>
        <item>14: ADVERSE DRIVING CONDITIONS</item>
        <item>15: PREVENTIVE MAINTENANCE</item>
        <item>16: CONDITIONS OF CARRIAGE</item>
        <item>17: HAZARDOUS MATERIALS</item>
        <item>18: EMERGENCY PROCEDURES</item>
        <item>19: WORK PLANNING</item>
        <item>20: CUSTOMER CARE</item>
        <item>21: THE EXAMINATION</item>
        <item>TRAFFIC SIGNS</item>
        <item>MODEL TOWN ILLUSTRATIONS</item>
    </string-array>
    <string name="chapter_one">Motor vehicles are an important part of our day-to-day living and provide
        a means for people and goods to be transported from one location to another.

        <br>The goal of driver training is ensure that you, as the driver, are equipped with
        the right knowledge of how to handle your vehicle and how to act appropriately when using the road.\n
        </br>\n

        <br>
        Most traffic accidents are caused by human error, however this can be easily
        prevented when the driver is adequately prepared for the traffic situation. This
        training also ensures that you are prepared with the necessary skills to provide
        safe and efficient transport services for goods and for passengers.\n
        </br>\n
    </string>
    <string name="chapter8a">
\nThis section allows you to start putting your theoretical knowledge into practice. You will
be asked to demonstrate certain aspects of your theoretical training at the manoeuvre
yard. The manoeuvre yard also provides you with an opportunity to practice and gain
confidence in driving before taking the car out to the road .
\nThese are some of the essential skills you must have before you are allowed to proceed
to the road.
        \n•<b>Driving Preparation</b>
\n As a learner you should be able to make the appropriate preparations before driving the
car. These preparations include the vehicle self-inspection as explained in Unit 7 above.
Once you are certain that your vehicle safe to drive.
\n• Adjust your driving seat to ensure that it is suitable for you.
\n• Adjust the mirrors if it is necessary
\n• Check the doors to ensure that they shut properly
\n• Fasten your seat belt and ensure that all passengers also do so
\n• Sit in the correct driving position – your back should get adequate
support and your feet should reach the pedals
\n• Hold the steering wheel correctly – It should be held with both hands
in the positions illustrated below. Your hands should hold the steering
wheel naturally, not too stretched or too bent
\n• From this position you should get a clear view of what is ahead of and
around you. You should also comfortably operate the brakes and the
accelerator
\n• Check all the instruments at the dashboard and ensure that they are all
in good working order
\n• Once this is done you can turn on the ignition and start practicing your
driving skills
        \n•<b>Car Movement and Control</b>
\n1. To start the vehicle
\n• Fully depress the clutch pedal and wait for three seconds
\n• Start the engine as follows
\no Put the hand brake ON
\no Turn the ignition switch ON
\no Turn the motor switch ON
\no Start motor control by turning the ignition key and releasing it
\nwhen the engine starts
\no Step lightly on the accelerator to warm the engine
\n• Check rear view mirrors
\n• Give the proper signal before moving
\n• Select the appropriate gear
\n• Increase the engine speed using the accelerator
\n• Move the handbrake to the OFF position
\n• Let the clutch pedal rise until the engine speed decreases slightly under
the load. Keep your feet in this position – on the clutch and accelerator
pedals
        \n•<b>2. To stop the vehicle</b>
\n• Check the rear view mirrors to ensure that it is safe to stop
\n• Signal properly to alert other road users
\n• Remove the foot from the accelerator
\n• Apply pressure on the foot brake and maintain it as necessary
\n• Depress the clutch pedal as the car comes to rest and maintain the
pressure
\n• Set the hand break at the ON position
\n• Put the gear lever in the 1ST position
\n• Switch off the engine
\n• Remove your foot from the break clutch pedal and then from the brake
pedal
        \n•<b>3. Using the gears</b>
\nMost vehicles have five forward gears and one reverse gear. You should know the
appropriate gear speed to be used when driving. You should learn to proficiently change
from 1st to 5th gear without looking.
\n The neutral position is where no gear is selected. Before starting the engine, the gear
should be in neutral position.
        \n\t•<b>1st Gear</b> – This is used when moving off from a stationary position. This gear is for
travelling between 0 and 30 km/h
        \n\t•<b>2nd Gear</b> – This allows you to move faster and is also applied in slow moving traffic
because it is more economical. It is also the ideal gear for moving downhill from a
stationary position.
        \n\t•<b>3rd Gear </b>- This is the appropriate gear for travelling between 35 and 70 km/h
        \n\t•<b>4th Gea</b> – This is the appropriate gear for travelling between 60 and 110 km/h.
        The 4th gear provides more power and speed to the engine and can be used when
        overtaking another vehicle.
        \n\t•<b>5th Gear</b> - This is the appropriate gear for travelling between 80 and 110 km/h.
This gear is used on highways where the speed limits are higher.
  \n<b>4. Steering the vehicle</b>
    </string>
    <string name="chapter8b">
\n• Hold the steering wheel correctly
\n• To steer in a straight course position your hands in the 10-minutes-to-2
position and aim the car in the general desired direction. Lightly correct
the vehicle’s tendency to turn from the neutral position
\n• To avoid injury from the airbag position your hands in the 9 and 3
position
\n• To change direction, pull the steering down in the direction you wish
to turn. Bring it down to meet your other hand then push the steering
wheel up until the turn has been executed
        \n\<b>5. Parking at the kerb</b>
You should always find a parking space that is legal and convenient to park. To park you
vehicle take the follow steps:
\n• Look into your rear view mirror so that you can know what is around
you. If there are no vehicles behind you, you may slow down to get a
clearer picture of what is around you.
\n• Locate a safe and convenient parking position
\n• Use your indicator signals to inform other road users of your intention
to slow down and park
\n• Slow down the vehicle by covering the brake and the clutch
\n• Gradually move a to a suitable distance from the kerb
\n• Apply the brake gently and 5 metres from your intended stop, press the
clutch as to avoid stalling the car
\n• Stop. Apply the handbrake and select neutral to cancel the indicator
\n• Remove feet from the pedals
        <b>Different types of parking.</b>
    </string>
    <string name="chapter8c">
        \n\<b>6. Turning</b>
        \n<b>J-turns</b>
\nA J-turn is a driving manoeuvre in which a reversing vehicle turns 180 degrees
and continues, facing forward, without changing direction of travel.
Only a confident driver who has had a sufficient experience driving on different
road surfaces should do this type of turn.
    </string>
    <string name="chapter8d">
        \n\<b>U-turn</b>
\nA U-turn is a driving manoeuvre in which a forward driving vehicle turns 180
degrees and continues, facing forward, but moving in the opposite direction.
Before you make a U-turn, check to make sure that there is no sign that says you
should not. To make a U-turn safely, you must be able to see well both sides.
    </string>
    <string name="chapter8e">
        \n\<b>7. Driving on Bends</b>
\nWhen approaching a bend, it is important to note how sharp the bend is. Look
out for road signs and markings which would indicate the type of bend you are
going to encounter.
\nAdjust your speed accordingly. If you are too fast you are more likely to skid or
lose control of your car. Surrounding trees, hedges, buildings and streetlights can
give you a good indication of how sharp the bend is if there are no road signs.
As you approach the bend, apply the MSM technique to communicate with other
road users
\n• Slow down and select a lower gear
\n• Do not brake as you steer round the bend
\n• When leaving a bend, check your mirrors and gently accelerate to the
speed appropriate for the traffic conditions
        \n\<b>8. Driving on Hills</b>
\nThis requires you to anticipate what is ahead of you. While going downhill you
have a clearer view but going uphill you see less of what is ahead of you.
When driving downhill, switch to a lower gear so that the engine controls some
of the braking. This protects your brakes from excessive wear and tear. It takes
longer for the vehicle to stop therefore you need a greater stopping distance.
When driving uphill, switch to a lower gear so as to maintain your speed.
        \n\<b>9. Reversing</b>
\nUse your mirrors to assist you in seeing what is behind you. When reversing, you
may tilt your head so that you can see beyond the head restraint.
Always reverse at slow speed so as to retain control of your steering. To steer the
car in reverse, turn the wheel in the direction you want the rear of the car to go.
Turning the wheel to the right steers the back of the car to the right. Turning the
wheel to the left steers to the left.
    </string>
</resources>